--- a/app/index.html
+++ b/app/index.html
@@ -21,7 +21,7 @@
 
     <!-- build:css styles/vendor.css -->
     <!-- bower:css -->
-    <link rel='stylesheet' href='/bower_components/materialize/bin/materialize.css' />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/css/materialize.min.css"></script>
     <link rel='stylesheet' href='/bower_components/fullpage.js/dist/jquery.fullpage.css' />
     <link rel='stylesheet' href='/bower_components/animate.css/animate.css' />
     <!-- endbower -->
@@ -767,9 +767,9 @@
 
     <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
-    <script src="/bower_components/jquery/dist/jquery.js"></script>
-    <script src="/bower_components/modernizr/modernizr.js"></script>
-    <script src="/bower_components/materialize/bin/materialize.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/js/materialize.min.js"></script>
     <script src="/bower_components/d3/d3.js"></script>
     <script src="/bower_components/fullpage.js/dist/jquery.fullpage.js"></script>
     <!-- endbower -->
